# amr

./: .gitignore  LICENSE.md  README.md  build.sh
fw/AMC/: CMakeLists.txt  README.md  build_all.sh  merge_amc_version.json
fw/AMC/fpt/: fpt.json  pdi_combine.bif  pdi_combine_rave.bif  pdi_combine_v80.bif
fw/AMC/scripts/: build.sh  build_amc.sh  build_bsp.sh  create_bsp.tcl  fpt_pdi_gen.py  fpt_rave.json  gen_fpt.py  gen_fpt_pdi.py  getVersion.sh
fw/AMC/scripts/rave/: isospec.cdo  isospec.iss
fw/AMC/scripts/v80/: isospec.cdo  isospec.iss
fw/AMC/src/: amc.c  lscript.ld
fw/AMC/src/apps/asdm/: asdm.c  asdm.h
fw/AMC/src/apps/asdm/debug/: asdm_debug.h
fw/AMC/src/apps/bim/: bim.c  bim.h
fw/AMC/src/apps/bim/debug/: bim_debug.h
fw/AMC/src/apps/in_band/: in_band_telemetry.c  in_band_telemetry.h
fw/AMC/src/apps/in_band/debug/: in_band_telemetry_debug.c  in_band_telemetry_debug.h
fw/AMC/src/apps/in_band/test/: CMakeLists.txt
fw/AMC/src/apps/out_of_band/: out_of_band_telemetry.c  out_of_band_telemetry.h
fw/AMC/src/apps/out_of_band/debug/: out_of_band_telemetry_debug.c  out_of_band_telemetry_debug.h
fw/AMC/src/common/core_libs/dal/: dal.c  dal.h
fw/AMC/src/common/core_libs/evl/: evl.c  evl.h
fw/AMC/src/common/core_libs/pll/: pll.c  pll.h
fw/AMC/src/common/include/: amc_cfg.h  amc_version.h  standard.h  util.h
fw/AMC/src/device_drivers/eeprom/: eeprom.h
fw/AMC/src/device_drivers/eeprom/aved/: eeprom.c
fw/AMC/src/device_drivers/eeprom/debug/: eeprom_debug.c  eeprom_debug.h
fw/AMC/src/device_drivers/eeprom/linux/: eeprom.c
fw/AMC/src/device_drivers/eeprom/rave/: eeprom.c
fw/AMC/src/device_drivers/emmc/: emmc.h
fw/AMC/src/device_drivers/emmc/aved/: emmc.c
fw/AMC/src/device_drivers/emmc/debug/: emmc_debug.c  emmc_debug.h
fw/AMC/src/device_drivers/gcq_driver/: README.md  gcq_version.json  getVersion.sh
fw/AMC/src/device_drivers/gcq_driver/src/: gcq.h  gcq_debug.h  gcq_driver.c  gcq_features.c  gcq_features.h  gcq_hw.c  gcq_hw.h  gcq_internal.h  gcq_regmap.h  gcq_ring.h  gcq_version.h
fw/AMC/src/device_drivers/i2c/: i2c.h
fw/AMC/src/device_drivers/i2c/aved/: i2c.c
fw/AMC/src/device_drivers/i2c/debug/: i2c_debug.c  i2c_debug.h
fw/AMC/src/device_drivers/i2c/linux/: i2c.c
fw/AMC/src/device_drivers/ospi/: ospi.h
fw/AMC/src/device_drivers/ospi/aved/: ospi.c
fw/AMC/src/device_drivers/ospi/debug/: ospi_debug.c  ospi_debug.h
fw/AMC/src/device_drivers/sensors/cat34ts02/: cat34ts02.c  cat34ts02.h
fw/AMC/src/device_drivers/sensors/ina3221/: ina3221.c  ina3221.h
fw/AMC/src/device_drivers/sensors/isl68221/: isl68221.c  isl68221.h
fw/AMC/src/device_drivers/sensors/sys_mon/: sys_mon.h
fw/AMC/src/device_drivers/smbus_driver/: getVersion.sh
fw/AMC/src/device_drivers/smbus_driver/doc/: i2c_application_apis.md  smbus_application_api_usage_examples.md  smbus_application_apis.md
fw/AMC/src/device_drivers/smbus_driver/src/: CMakeLists.txt  i2c.h  smbus.h  smbus_action.c  smbus_action.h  smbus_circular_log.c  smbus_driver.c  smbus_event.c  smbus_event.h  smbus_event_buffer.c  smbus_event_buffer.h  smbus_hardware.h  smbus_hardware_access.c  smbus_hardware_access.h  smbus_hw.h  smbus_hw_access.c  smbus_hw_access.h  smbus_internal.h  smbus_interrupt_handler.c  smbus_interrupt_handler.h  smbus_state.c  smbus_state.h  smbus_version.h
fw/AMC/src/fal/: README.md  fw_if.h
fw/AMC/src/fal/emmc/: fw_if_emmc.h  fw_if_emmc_amc.c  fw_if_emmc_stub.c
fw/AMC/src/fal/gcq/: fw_if_gcq.h  fw_if_gcq_amc.c  fw_if_gcq_linux.c  fw_if_gcq_stub.c
fw/AMC/src/fal/gcq/debug/: fw_if_gcq_debug.c  fw_if_gcq_debug.h
fw/AMC/src/fal/muxed_device/: fw_if_muxed_device.h  fw_if_muxed_device_amc.c  fw_if_muxed_device_stub.c
fw/AMC/src/fal/ospi/: fw_if_ospi.h  fw_if_ospi_amc.c  fw_if_ospi_stub.c
fw/AMC/src/fal/ospi/debug/: fw_if_ospi_debug.c  fw_if_ospi_debug.h
fw/AMC/src/fal/smbus/: fw_if_smbus.h  fw_if_smbus_block_io.c  fw_if_smbus_stub.c
fw/AMC/src/fal/smbus/debug/: fw_if_smbus_debug.c  fw_if_smbus_debug.h
fw/AMC/src/fal/test/: fw_if_test.h  fw_if_test_stub.c
fw/AMC/src/fal/uart/: fw_if_uart.h  fw_if_uart_amc.c  fw_if_uart_linux.c  fw_if_uart_stub.c
fw/AMC/src/fal/uart/debug/: fw_if_uart_debug.c  fw_if_uart_debug.h
fw/AMC/src/osal/debug/: osal_debug.c  osal_debug.h
fw/AMC/src/osal/src/: README.md  osal.h
fw/AMC/src/osal/src/freeRTOS/: osal.c
fw/AMC/src/osal/src/linux/: osal.c
fw/AMC/src/profiles/: profile.h  profile_bim.h  profile_debug_menu.h  profile_fal.h  profile_muxed_device.h  profile_print.h
fw/AMC/src/profiles/Linux/: profile_bim.h  profile_debug_menu.c  profile_debug_menu.h  profile_fal.c  profile_fal.h  profile_hal.h  profile_hal_memory_base.c  profile_muxed_device.h  profile_pdr.h  profile_print.h  profile_sensors.h
fw/AMC/src/profiles/rave/: profile_bim.h  profile_debug_menu.c  profile_debug_menu.h  profile_fal.c  profile_fal.h  profile_hal.h  profile_muxed_device.h  profile_pdr.h  profile_print.h  profile_sensors.h
fw/AMC/src/profiles/v70/: profile_bim.h  profile_debug_menu.c  profile_debug_menu.h  profile_fal.c  profile_fal.h  profile_hal.h  profile_muxed_device.h  profile_pdr.h  profile_print.h  profile_sensors.h
fw/AMC/src/profiles/v80/: profile_bim.h  profile_debug_menu.c  profile_debug_menu.h  profile_fal.c  profile_fal.h  profile_hal.h  profile_muxed_device.h  profile_pdr.h  profile_print.h  profile_sensors.h
fw/AMC/src/proxy_drivers/ami/: ami_proxy_driver.c  ami_proxy_driver.h
fw/AMC/src/proxy_drivers/ami/debug/: ami_proxy_driver_debug.c  ami_proxy_driver_debug.h
fw/AMC/src/proxy_drivers/apc/: apc_proxy_driver.c  apc_proxy_driver.h
fw/AMC/src/proxy_drivers/apc/debug/: apc_proxy_driver_debug.c  apc_proxy_driver_debug.h
fw/AMC/src/proxy_drivers/asc/: asc_proxy_driver.c  asc_proxy_driver.h
fw/AMC/src/proxy_drivers/asc/debug/: asc_proxy_driver_debug.c  asc_proxy_driver_debug.h
fw/AMC/src/proxy_drivers/axc/: axc_proxy_driver.c  axc_proxy_driver.h
fw/AMC/src/proxy_drivers/axc/debug/: axc_proxy_driver_debug.c  axc_proxy_driver_debug.h
fw/AMC/src/proxy_drivers/bmc/: bmc_proxy_driver.c  bmc_proxy_driver.h
(+204 files in other folders)
